<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.wifedub.MainActivity">

        <TextView
            style="@style/question"
            android:text="@string/question_1" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_ques1_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_false" />
        </RadioGroup>

        <TextView
            style="@style/question"
            android:text="@string/question_2" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_true" />

            <RadioButton
                android:id="@+id/radio_ques2_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_false" />
        </RadioGroup>

        <TextView
            style="@style/question"
            android:text="@string/question_3" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_ques3_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3_option1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3_option2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3_option3" />

            <RadioButton
                android:id="@+id/radio_ques3_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3_option4" />
        </RadioGroup>

        <TextView
            style="@style/question"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/checkbox_ques4_choice1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:text="@string/ques4_option1" />

        <CheckBox
            android:id="@+id/checkbox_ques4_choice2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:text="@string/ques4_option2" />

        <CheckBox
            android:id="@+id/checkbox_ques4_choice3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:text="@string/ques4_option3" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:text="@string/ques4_option4" />

        <TextView
            style="@style/question"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/edit_ques5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint"/>

        <TextView
            style="@style/question"
            android:text="@string/question_6" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/question_bottom_margin"
            android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_ques6_ans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ques6_option1" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ques6_option2" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ques6_option3" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ques6_option4" />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/button_margin"
            android:onClick="calculateScore"/>
    </LinearLayout>
</ScrollView>
